--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,16 @@
-
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
-
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.2.3'
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
     }
 }
 
@@ -33,6 +38,21 @@ repositories {
 
 dependencies {
     compileOnly 'com.facebook.react:react-native:+'
-    compile 'org.apache.commons:commons-lang3:3.6'
-    compile 'com.criteo.android:events-sdk:1.1.5'
+    implement 'org.apache.commons:commons-lang3:3.6'
+    implement 'com.criteo.android:events-sdk:1.1.7'
+    implement 'com.android.support:appcompat-v7:25.3.0'
+}
+
+
+
+// The upload.gradle file is used internally for storing binaries to Criteo's private repository.
+// You can either ignore it or use your own upload file.
+if (file('upload.gradle').exists()) {
+    apply from: 'upload.gradle'
+}
+
+license {
+    header rootProject.file('LICENSE')
+    include "**/*.java"
+    exclude "**/*Test.java"
 }
