--- a/android/build.gradle
+++ b/android/build.gradle
@@ -32,7 +32,7 @@ repositories {
 }
 
 dependencies {
-    compile 'com.facebook.react:react-native:+'
-    compile 'org.apache.commons:commons-lang3:3.6'
-    compile 'com.criteo.android:events-sdk:1.1.5'
+    compileOnly 'com.facebook.react:react-native:+'
+    implementation 'org.apache.commons:commons-lang3:3.6'
+    implementation 'com.criteo.android:events-sdk:1.1.7'
 }
