--- a/android/build.gradle
+++ b/android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
@@ -18,7 +18,7 @@ android {
     defaultConfig {
         minSdkVersion 17
         multiDexEnabled true
-        targetSdkVersion 22
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
     }
@@ -33,6 +33,6 @@ repositories {
 
 dependencies {
     compileOnly 'com.facebook.react:react-native:+'
-    implementation 'org.apache.commons:commons-lang3:3.6'
-    implementation 'com.criteo.android:events-sdk:1.1.5'
+    implementation 'com.android.support:appcompat-v7:25.3.0'
+    implementation 'com.criteo.android:events-sdk:1.1.7'
 }
