--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-native": "*"
   },
   "devDependencies": {
-    "react": "^16.2.0",
-    "react-native": ">=0.52.1"
+    "react": "16.8.6",
+    "react-native": "0.60.5"
   }
 }
