--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,4 +37,5 @@ repositories {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation project(path: ':events-sdk-1.1.7')
 }
