--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
@@ -10,32 +11,17 @@ buildscript {
     }
 }
 
-apply plugin: 'com.android.library'
-
-android {
-    compileSdkVersion 28
-    buildToolsVersion "28.0.3"
-
-    defaultConfig {
-        minSdkVersion 17
-        multiDexEnabled true
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
-    }
-    lintOptions {
-        abortOnError false
+allprojects {
+    repositories {
+        mavenLocal()
+        jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
 }
 
-repositories {
-    mavenCentral()
-    google()
 
-}
 
-dependencies {
-    implementation 'com.facebook.react:react-native:+'
-    implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation project(':events-sdk')
-}
+
