--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,5 +20,5 @@ android {
 dependencies {
     implementation 'com.facebook.react:react-native:+'
     implementation 'androidx.appcompat:appcompat:1.0.0'
-    implementation project(path: ':events-sdk-1.1.7')
+    implementation files('../libs/events-sdk-1.1.7.aar')
 }
